feat(server-just-site): added maintenance component and improved light mode ui

--- a/libs/branding/assets/css/tailwind.css
+++ b/libs/branding/assets/css/tailwind.css
@@ -6,3 +6,8 @@
     font-family: "JetBrains Mono";
     src: url("../font/JetBrainsMono.ttf");
 }
+
+@font-face {
+    font-family: "Inter";
+    src: url("../font/Inter.ttf");
+}
