--- a/apps/maintenance/src/pages/index.astro
+++ b/apps/maintenance/src/pages/index.astro
@@ -14,10 +14,10 @@ import gear from "../assets/gear.svg?raw";
 </head>
 <body>
 <div
-    class="min-h-screen overflow-x-hidden flex flex-col bg-slate-50 items-center align-middle">
+    class="min-h-screen overflow-x-hidden flex flex-col bg-slate-50 items-center align-middle p-8">
     <div class="my-auto text-center">
-        <h1 class="text-4xl text-primary-500 font-medium mb-4">🚧 We'll be back soon!</h1>
-        <p class="text-secondary-500 text-lg">
+        <h1 class="text-2xl md:text-4xl text-primary-500 font-medium mb-4">🚧 We'll be back soon!</h1>
+        <p class="text-secondary-500 md:text-lg">
             We're currently performing some maintenance. The site will be available shortly.
             Thank you for your patience!
         </p>
