--- a/packages/just/maintenance/src/pages/index.astro
+++ b/packages/just/maintenance/src/pages/index.astro
@@ -13,14 +13,17 @@ import "@cdw/monorepo/just-branding/assets/css/tailwind.css";
         <title>Maintenance</title>
     </head>
     <body>
-        <div class="min-h-screen overflow-x-hidden flex flex-col bg-slate-50 items-center align-middle p-8">
+        <div
+            class="flex min-h-screen flex-col items-center overflow-x-hidden bg-slate-50 p-8 align-middle">
             <div class="my-auto text-center">
-                <h1 class="text-2xl md:text-4xl text-primary-500 font-medium mb-4">🚧 We'll be back soon!</h1>
+                <h1 class="text-primary-500 mb-4 text-2xl font-medium md:text-4xl">
+                    🚧 We'll be back soon!
+                </h1>
                 <p class="text-secondary-500 md:text-lg">
-                    We're currently performing some maintenance. The site will be available shortly. Thank you for your
-                    patience!
+                    We're currently performing some maintenance. The site will be available shortly.
+                    Thank you for your patience!
                 </p>
-                <div class="h-10 w-10 m-8 mx-auto animate-spin-slow">
+                <div class="animate-spin-slow m-8 mx-auto size-10">
                     <Fragment set:html={gear} />
                 </div>
             </div>
