feat(just-website): completed cv, added doi and styling to resources, hashtag for reading-list

--- a/packages/just/branding/assets/css/tailwind.css
+++ b/packages/just/branding/assets/css/tailwind.css
@@ -4,10 +4,12 @@
 
 @font-face {
     font-family: "JetBrains Mono";
-    src: url("../font/JetBrainsMono.ttf");
+    src: url("../font/JetbrainsMono.woff2") format("woff2");
+    font-display: swap;
 }
 
 @font-face {
     font-family: "Inter";
-    src: url("../font/Inter.ttf");
+    src: url("../font/Inter.woff2") format("woff2");
+    font-display: swap;
 }
