--- a/packages/zinzow/website/src/tailwind.css
+++ b/packages/zinzow/website/src/tailwind.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 @font-face {
     font-family: "Lato";
@@ -70,4 +68,67 @@
     src: url("/fonts/Lato/Lato-BlackItalic.ttf") format("truetype");
     font-weight: 900;
     font-style: italic;
+}
+
+@theme {
+    --font-sans: "Lato", sans-serif;
+    --animate-backdrop: backdrop 0.2s ease-in-out forwards;
+    --animate-backdropReverse: backdropReverse 0.2s ease-in-out forwards;
+    --animate-flyInRight: flyInRight 0.2s ease-in-out forwards;
+    --animate-flyOutRight: flyOutRight 0.2s ease-in-out forwards;
+    --animate-fadeInBT: fadeInBT 0.5s ease-in-out forwards;
+    --animate-fadeIn: fadeIn 0.5s ease-in-out forwards;
+
+    @keyframes backdrop {
+        0% {
+            backdrop-filter: blur(0px) brightness(1);
+        }
+        100% {
+            backdrop-filter: blur(4px) brightness(0.5);
+        }
+    }
+    @keyframes backdropReverse: {
+        0%: {
+            backdrop-filter: blur(4px) brightness(0.5);
+        }
+        100%: {
+            backdrop-filter: blur(0px) brightness(1);
+        }
+    }
+    @keyframes flyInRight: {
+        0%: {
+            transform: translateX(100%);
+        }
+        100%: {
+            transform: translateX(0%);
+        }
+    }
+    @keyframes flyOutRight: {
+        0%: {
+            transform: translateX(0%);
+        }
+        100%: {
+            transform: translateX(100%);
+        }
+    }
+    @keyframes fadeIn: {
+        0%: {
+            opacity: 0;
+            display: none;
+        }
+        100%: {
+            opacity: 1;
+        }
+    }
+    @keyframes fadeInBT: {
+        0%: {
+            opacity: 0;
+            transform: translateY(1rem);
+            display: none;
+        }
+        100%: {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
 }
