style: fix linting for tailwind classes

--- a/packages/just/maintenance/src/pages/index.astro
+++ b/packages/just/maintenance/src/pages/index.astro
@@ -14,12 +14,23 @@ import "@cdw/monorepo/just-branding/assets/css/tailwind.css";
     </head>
     <body>
         <div
-            class="flex min-h-screen flex-col items-center overflow-x-hidden bg-slate-50 p-8 align-middle">
+            class={`
+                flex min-h-screen flex-col items-center overflow-x-hidden bg-slate-50 p-8
+                align-middle
+            `}>
             <div class="my-auto text-center">
-                <h1 class="text-primary-500 mb-4 text-2xl font-medium md:text-4xl">
+                <h1
+                    class={`
+                        text-primary-500 mb-4 text-2xl font-medium
+                        md:text-4xl
+                    `}>
                     🚧 We'll be back soon!
                 </h1>
-                <p class="text-secondary-500 md:text-lg">
+                <p
+                    class={`
+                        text-secondary-500
+                        md:text-lg
+                    `}>
                     We're currently performing some maintenance. The site will be available shortly.
                     Thank you for your patience!
                 </p>
