feat(zinzow-website): improve form state and error handling

--- a/packages/zinzow/website/src/tailwind.css
+++ b/packages/zinzow/website/src/tailwind.css
@@ -112,6 +112,9 @@
 }
 
 @theme {
+    --color-error-light: var(--color-red-600);
+    --color-error-dark: var(--color-red-800);
+
     --breakpoint-xs: 32rem;
 
     --font-sans: "Lato", sans-serif;
