--- a/packages/just/branding/assets/css/tailwind.css
+++ b/packages/just/branding/assets/css/tailwind.css
@@ -2,13 +2,13 @@
 
 @font-face {
     font-family: "JetBrains Mono";
-    src: url("../font/JetbrainsMono.woff2") format("woff2");
+    src: url("../font/jetbrains-mono/JetbrainsMono.woff2") format("woff2");
     font-display: swap;
 }
 
 @font-face {
     font-family: "Inter";
-    src: url("../font/Inter.woff2") format("woff2");
+    src: url("../font/inter/Inter.woff2") format("woff2");
     font-display: swap;
 }
 
