style: fix linting

--- a/packages/just/maintenance/src/pages/index.astro
+++ b/packages/just/maintenance/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import favicon from "@cdw/monorepo/just-branding/assets/favicon/favicon.ico";
 import gear from "../assets/gear.svg?raw";
-import "@cdw/monorepo/just-branding/assets/css/tailwind.css";
+import "../tailwind.css";
 ---
 
 <html lang="en">
@@ -21,14 +21,14 @@ import "@cdw/monorepo/just-branding/assets/css/tailwind.css";
             <div class="my-auto text-center">
                 <h1
                     class={`
-                        text-primary-500 mb-4 text-2xl font-medium
+                        text-primary mb-4 text-2xl font-medium
                         md:text-4xl
                     `}>
                     🚧 We'll be back soon!
                 </h1>
                 <p
                     class={`
-                        text-secondary-500
+                        text-secondary
                         md:text-lg
                     `}>
                     We're currently performing some maintenance. The site will be available shortly.
