--- a/packages/just/branding/assets/css/tailwind.css
+++ b/packages/just/branding/assets/css/tailwind.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 @import "tailwind-scrollbar-hide/v4";
+@source "../../../shared/svelte/components/src/";
 @source "../../../../shared/svelte/components/src/";
 
 @font-face {
