--- a/packages/just/branding/assets/css/tailwind.css
+++ b/packages/just/branding/assets/css/tailwind.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 @import "tailwind-scrollbar-hide/v4";
+@plugin "@iconify/tailwind4";
+
 @source "../../../shared/svelte/components/src/";
 @source "../../../../shared/svelte/components/src/";
 
